--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "SASS-Project",
+  "name": "sass-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel ./src/index.html",
+    "start": "parcel src/index.html -p 2984",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
